<resources>
    <string name="app_name">AnimeApp</string>
    <string name="animeapp">AnimeApp</string>
    <string name="example_name">Alice Kim</string>
    <string name="the_list_of_anime_s_posters">the list of anime\'s posters</string>
    <string name="add_to_favorite_set">add to favorite set</string>
    <string name="next_layout">Next layout  ></string>
    <string name="fantasy">Fantasy</string>
    <string name="adventure">Adventure</string>
    <string name="comedy">Comedy</string>
    <string name="description_text">Centuries ago, mankind was slaughtered to near extinction by monstrous humanoid creatures called titans, forcing humans to hide in fear behind enormous concentric walls. What makes these giants truly terrifying is that their taste for human flesh is not born out of hunger but what appears to be out of pleasure. To ensure their survival, the remnants of humanity began living within defensive barriers, resulting in one hundred years without a single titan encounter. However, that fragile calm is soon shattered when a colossal titan manages to breach the supposedly impregnable outer wall, reigniting the fight for survival against the man-eating abominations.\n\nAfter witnessing a horrific personal loss at the hands of the invading creatures, Eren Yeager dedicates his life to their eradication by enlisting into the Survey Corps, an elite military unit that combats the merciless humanoids outside the protection of the walls. Based on Hajime Isayama\'s award-winning manga, Shingeki no Kyojin follows Eren, along with his adopted sister Mikasa Ackerman and his childhood friend Armin Arlert, as they join the brutal war against the titans and race to discover a way of defeating them before the last walls are breached.\n\n(Source: MAL Rewrite)</string>
</resources>