<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.homeActivity.HomeActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/style_name_background"
        android:fontFamily="@font/roboto_slab"

        android:paddingHorizontal="20dp"
        android:text="@string/example_name"
        android:textSize="33sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/photo"
        android:layout_width="66dp"
        android:layout_height="66dp"

        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_icon_default"
        app:circularflow_defaultRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/type_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photo">

        <TextView
            android:id="@+id/adventure"
            style="@style/style_type"
            android:background="@drawable/style_type_selected"
            android:text="@string/adventure"
            android:layout_margin="3dp"

            app:layout_constraintEnd_toStartOf="@+id/fantasy"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/fantasy"
            style="@style/style_type"

            android:layout_margin="3dp"
            android:background="@drawable/style_type"
            android:text="@string/fantasy"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/comedy"
            app:layout_constraintStart_toEndOf="@+id/adventure" />

        <TextView
            android:id="@+id/comedy"
            style="@style/style_type"

            android:layout_margin="3dp"
            android:background="@drawable/style_type"
            android:text="@string/comedy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fantasy" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentContainerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_layout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:contentDescription="@string/the_list_of_anime_s_posters"

            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:spanCount="2"
            tools:layout_editor_absoluteX="98dp"
            tools:layout_editor_absoluteY="8dp"
            tools:listitem="@layout/poster_item" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>